--- a/src/styles.css
+++ b/src/styles.css
@@ -21,4 +21,5 @@ body {
     background-color: #42693f22;
     width: 100%;
     min-width: 430px;
+    overflow-x: hidden;
 }
